# job_board_app

./: .gitignore  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  setup_prod.sh
App/: App.csproj  Program.cs
App.Tests/: App.Tests.csproj  JobServiceTests.cs  UnitTest1.cs
App/Controllers/: HomeController.cs  JobController.cs  JobService.cs
App/Data/: AppDbContext.cs
App/Models/: Job.cs
App/Properties/: launchSettings.json
Backend/: Backend.csproj  Backend.http  Dockerfile  Program.cs  appsettings.json
Backend/Controllers/: FilesController.cs  JobsController.cs  UsersController.cs
Backend/Data/: AppDbContext.cs
Backend/Models/: Files.cs  (+6 more)
Frontend/: Dockerfile  index.html  package.json
backend/: .gitignore  Cargo.toml  db_setup.yaml
frontend/: Cargo.toml  Program.cs  Trunk.toml  index.html  package-lock.json  package.json  script.js
frontend/Components/Layout/: MainLayout.razor  NavMenu.razor
frontend/Components/Pages/: Add.razor  Edit.razor  Home.razor
frontend/Properties/: launchSettings.json
frontend/src/: App.js  main.rs
frontend/src/components/: Nav.js
frontend/src/stylesheets/: navStyling.css
frontend/src/views/: Applications.js  EditJob.js  Home.js  Login.js  Register.js  csrftoken.js
frontend/static/: style.css
frontend/templates/: edit_job.html  index.html  new_jobs.html
new_backend/: Cargo.toml  db_setup.yaml
new_backend/migrations/2024-02-25-154431_create_jobs/: up.sql
new_backend/migrations/2024-02-25-154431_create_users/: up.sql
new_backend/src/: handlers.rs  main.rs  models.rs  schema.rs
(+79 files in other folders)
