[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
askama_actix = "0.14.0"
askama = "0.12.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_derive = "1.0.199"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
