[package]
name = "new_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
argon2 = "0.5.3"
chrono = "0.4.35"
diesel = {version="2.1.4", features=["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
serde = {version="1.0.197", features=["derive"]}
serde_json = "1.0.114"
uuid = { version = "1.8.0", features = ["v4"] }
